# genai_python

./: main.py  pyproject.toml
